--- a/src/style/style.less
+++ b/src/style/style.less
@@ -4,22 +4,30 @@
 // Put you style below
 // ##############################################
 
+@default-margin: 0.75em;
+
 p {
   font-size: 18px;
   line-height: 28px;
+  margin: 0 0 15px;
 }
 
 h1 {
-  margin-bottom: 1.5em;
+  margin-bottom: @default-margin * 1.75;
 }
 
 h2, h3 {
-  margin-bottom: 1.25em;
-  margin-top: 2.25em;
+  margin-bottom: @default-margin * 1.5;
+  margin-top: @default-margin * 2.25;
+}
+
+h4 {
+  margin-bottom: @default-margin;
+  margin-top: @default-margin * 3;
 }
 
 hr {
-  margin-top: 3em;
+  margin-top: @default-margin * 2.5;
 }
 
 .color {
@@ -47,4 +55,18 @@ hr {
     font-weight: 700;
     margin-right: 15px;
   }
+}
+
+.soon {
+  color: #8C8C8C;
+}
+
+.soon-badge {
+  font-size: 14px;
+  font-weight: 400;
+  background-color: #8C8C8C;
+  color: #FFF;
+  padding: 5px;
+  border-radius: 3px;
+  margin-bottom: 1em;
 }
